[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Sword.gd" type="Script" id=1]
[ext_resource path="res://Assets/Weapons/Sword.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 382.168 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 168.871, 19.1216 )

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.42626, -2.05614 ), Vector2( -0.42626, -2.05614 ), Vector2( -0.42626, -2.05614 ), Vector2( -0.42626, -2.05614 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 91.9145, -74.9999, 44.9999, 89.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[node name="Sword" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.42626, -2.05614 )
rotation = 1.60421
scale = Vector2( 0.368624, 0.431358 )
texture = ExtResource( 2 )
offset = Vector2( 9.53674e-007, -267.319 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 1.61987, -284.539 )
rotation = -0.0201844
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 123.683, 2.34162 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1 = SubResource( 3 )

[node name="Head" type="Position2D" parent="."]
position = Vector2( 275.54, -3.76306 )

[node name="Tail" type="Position2D" parent="."]
position = Vector2( -31.3588, 3.34494 )
[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
